# TaskWorker

./: CMakeLists.txt  README.md  build_vs2015.bat
libraries/release/: gtest.lib
src/: CMakeLists.txt  looper.cpp  looper.h  looper_test.cpp  message_queue.cpp  message_queue.h  message_queue_ui_test.cpp  pending_task.cpp  pending_task.h  task_runner.cpp  task_runner.h  test_suite.cpp  tracker.cpp  tracker.h  waitable_event.cpp  waitable_event.h  weakptr_factory.h  worker_thread.cpp  worker_thread.h  worker_thread_test.cpp
src/base/: basictypes.h  string_helper.cpp  string_helper.h
src/base/notification/: notification_details.h  notification_observer.h  notification_registrar.cpp  notification_registrar.h  notification_service.h  notification_service_impl.cpp  notification_service_impl.h  notification_source.h  notification_types.h  observer_list.h
src/callback/: bind.h  bind_callback.cpp  bind_callback.h  bind_helpers.h  bind_storage.h  bind_unittest.cpp
src/lib/debug/: gtest.lib
src/lib/release/: gtest.lib
src/message_queue/: message_queue.cpp  message_queue.h  message_queue_ui.cpp  message_queue_ui.h  message_queue_ui_test.cpp
src/win/: win_utils.cpp  win_utils.h
tools/: setup_env.bat
tools/cmake-3.5.0-win32-x86/doc/cmake/html/: genindex.html  index.html  search.html  searchindex.js
tools/cmake-3.5.0-win32-x86/doc/cmake/html/command/: add_compile_options.html  add_custom_command.html  add_custom_target.html  add_definitions.html  add_dependencies.html  add_executable.html  add_library.html  add_subdirectory.html  add_test.html  aux_source_directory.html  break.html  build_command.html  build_name.html  cmake_host_system_information.html  cmake_minimum_required.html  cmake_parse_arguments.html  cmake_policy.html  configure_file.html  continue.html  create_test_sourcelist.html  ctest_build.html  ctest_configure.html  ctest_coverage.html  ctest_empty_binary_directory.html  ctest_memcheck.html  ctest_read_custom_files.html  ctest_run_script.html  ctest_sleep.html  (+89 more)
tools/cmake-3.5.0-win32-x86/man/man1/: ccmake.1  cmake-gui.1  cmake.1  cpack.1  ctest.1
tools/cmake-3.5.0-win32-x86/man/man7/: cmake-buildsystem.7  cmake-commands.7  cmake-compile-features.7  cmake-developer.7  cmake-generator-expressions.7  cmake-generators.7  cmake-language.7  cmake-modules.7  cmake-packages.7  cmake-policies.7  cmake-properties.7  cmake-qt.7  cmake-toolchains.7  cmake-variables.7
(+1046 files in other folders)
